Fixed overlapping issue with navbar

--- a/public/styles/allstyles.css
+++ b/public/styles/allstyles.css
@@ -34,7 +34,7 @@
        background-color: var(--nav-background-color);
        border-radius: 10px;
        justify-content: center;
-       z-index: 1;
+       z-index: 10;
    }
    
    .nav-links{
